# cmake_ex

./: *cmake-tools*  .gitignore  CMakeLists.txt  compile_commands.json  main.cpp
.cache/clangd/index/: blah.cpp.803B53DEF7F8B188.idx  blah.h.5C5B4929E39389A0.idx  main.cpp.97214132F0800EA1.idx
include/: blah.h
src/: blah.cpp
